@@ -1,3 +1,8 @@
+2011-06-29  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/ttk/ttkTrace.c: [Bug 3341056] Correct segfault due to flaw
+	* tests/ttk/ttk.test:	in the 2011-06-17 commit.
+
 2011-06-23  Don Porter  <dgp@users.sourceforge.net>
 
 	* changes:	Updated for 8.5.10 release.
